Add simple main page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,12 @@
   </div>
   
   <div id="main-content" style="display: none;">
-    <img src="./images/mainpage.jpg" alt="mainpage" />
+    <img class="island" src="./images/mainpage/island.png" alt="island" />
+    
+    <img class="small-icon rivaa" src="./images/mainpage/RIVAA.png" alt="rivaa" />
+    <img class="small-icon bus" src="./images/mainpage/BUS.png" alt="bus" />
+    <img class="small-icon eat" src="./images/mainpage/EAT.png" alt="eat" />
+    <img class="small-icon walk" src="./images/mainpage/WALK.png" alt="walk" />
   </div>
 </body>
 </html>
