--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
       document.getElementById('splash').style.display = 'none';
       document.getElementById('main-content').style.display = 'block';
     }
+
+    function showRivaaPage() {
+      document.getElementById('main-content').style.display = 'none';
+      document.getElementById('rivaapage').style.display = 'block';
+    }
+
+    function returnToMainPage() {
+      document.getElementById('rivaapage').style.display = 'none';
+      // 在这里添加其他页面的隐藏代码
+      document.getElementById('main-content').style.display = 'block';
+    }
   </script>
 </head>
 <body>
@@ -22,10 +33,17 @@
   <div id="main-content" style="display: none;">
     <img class="island" src="./images/mainpage/island.png" alt="island" />
     
-    <img class="small-icon rivaa" src="./images/mainpage/RIVAA.png" alt="rivaa" />
+    <img class="small-icon rivaa" src="./images/mainpage/RIVAA.png" alt="rivaa" onclick="showRivaaPage()" />
     <img class="small-icon bus" src="./images/mainpage/BUS.png" alt="bus" />
     <img class="small-icon eat" src="./images/mainpage/EAT.png" alt="eat" />
     <img class="small-icon walk" src="./images/mainpage/WALK.png" alt="walk" />
+  </div>
+  
+  <div id="rivaapage" style="display: none;">
+    <button onclick="returnToMainPage()" style="border:none;background:none;">
+      <img src="./images/backarrow.png" alt="返回" />
+    </button>
+    <img src="./images/rivaapage/rivaaPage.png" alt="rivaapage" />
   </div>
 </body>
 </html>
